fix(interactivity): prevent weird scrolling issues on smaller screen sizes

--- a/css/interactivity.css
+++ b/css/interactivity.css
@@ -102,8 +102,8 @@ body:has(input[form="edit-form"]:checked) {
   input {
     opacity: 0;
     position: absolute;
-    height: 1px;
-    width: 1px;
+    height: 0px;
+    width: 0px;
   }
 }
 
